About text updated

--- a/pp/templates/pp/index.html
+++ b/pp/templates/pp/index.html
@@ -237,30 +237,34 @@
           <div class="about-inner reveal">
             <div class="inner-left border-line reveal">
               <p>
-                Hello and welcome! My name is <span>Saad Khan</span>, also known as
-                <span>The Upper Case Guy</span>. As a passionate creator, I enjoy developing a wide 
-                range of projects such as games, websites, Hardware Projects and softwares.
-                 I thrive on challenges and love to solve complex problems.
+                Welcome to my world of creation and problem-solving! I'm <span>Saad Khan</span>,
+                also known as <span>The Upper Case Guy</span>. As a passionate developer, I find joy
+                in crafting diverse projects, ranging from captivating games and interactive
+                websites to intriguing hardware projects and innovative software solutions. Challenges
+                fuel my motivation, and I thrive on unraveling complex problems.
               </p>
               <p>
-                My journey as a developer started in my teenage years when I first discovered my passion for
-                 creating and solving problems. From that moment on, I knew that coding was my calling.
+                My journey into the realm of development commenced during my teenage years 
+                when the allure of creation and problem-solving captivated me. Since that defining moment, 
+                coding has become my true calling.
               </p>
               <p>
-                Currently, I am pursuing a degree in Computer Engineering at
-                <a href="https://giki.edu.pk/" target="_blank" class="hover-underline-animation">GIK</a>,
-                where I am able to combine my passion for coding with my love for technology. As a leader of multiple teams and societies
-                 at my college, I enjoy the opportunity to share my knowledge and inspire others.
-                  Additionally, I have completed internships at multiple start-ups and multi-national tech companies,
-                   which has further enhanced my skills and knowledge in the field.
+                Currently, I am pursuing a degree in Computer Engineering at  <a href="https://giki.edu.pk/" target="_blank" class="hover-underline-animation">GIK</a>, where I embrace
+                the perfect amalgamation of my coding passion and fascination with technology. 
+                As a leader in multiple teams and societies at college, I relish the opportunity 
+                to share my knowledge and inspire others on their own paths of discovery. Moreover, 
+                I've honed my skills and knowledge through internships with various start-ups and multinational 
+                tech companies, enriching my expertise in the field.
               </p>
+
               <p>
-                Thank you for taking the time to learn more about me and my journey as a developer.
-                 I am always looking for new challenges and opportunities to grow, so please feel
-                  free to reach out if you would like to connect or collaborate.
+                Thank you for taking the time to delve into my journey as a developer. I am always eager to embrace fresh challenges and opportunities for growth. If you're interested in connecting or collaborating, feel free to reach out—I'd love to explore the boundless possibilities together. Let's innovate and create wonders in the world of technology!
               </p>
               <p>Internships and start-ups where i worked at:</p>
               <ul>
+                <li>
+                  <a href="https://musketeerstech.com/" target="_blank" class="hover-underline-animation">Musketeers PVT</a>
+                </li>
                 <li>
                   <a href="https://ourgoodspace.com/" target="_blank" class="hover-underline-animation">GoodSpace</a>
                 </li>
@@ -271,8 +275,11 @@
               </ul>
               <p>Some of the few Tech's and Concepts I'm good at:</p>
               <ul>
+                <li>Veriloge</li>
+                <li>RTL Design</li>
+                <li>Assembly</li>
                 <li>Django</li>
-                <li>Laravel</li>
+                <li>React</li>
                 <li>Html & CSS</li>
                 <li>JavsScrip(ES6+)</li>
                 <li>Python</li>
